Salesforce Training org/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Board</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Board__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <recordTypes>
        <fullName>CBSE</fullName>
        <active>true</active>
        <description>Central Board of Secondary Education</description>
        <label>CBSE</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICSE</fullName>
        <active>true</active>
        <description>Indian Certificate of Secondary Education</description>
        <label>ICSE</label>
    </recordTypes>
    <recordTypes>
        <fullName>SBSE</fullName>
        <active>true</active>
        <description>State Board od Seconadary Education</description>
        <label>SBSE</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>